[package]
name = "bevy_pbr_types"
version = "0.16.0-dev"
edition = "2024"
description = "Adds PBR rendering types to Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]

[dependencies]
# bevy

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
